2010-08-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/info.c (WriteINFOImage): Added an 'INFO' coder which
	produces textual image description output similar to 'identify'
	but may be used with convert like "gm convert myfile info:-".
	Feature suggested by Stefan Schramowski.

2010-08-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/Makefile.am (TESTS_PS_XFAIL_TESTS): Expect EPT tests to
	fail if Ghostscript is missing.

	* configure.ac: Updated to Autoconf 2.67.

	* magick/render.c (DrawImage): Use StringToGravityType() to parse
	gravity values.

2010-07-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* doc/options.imdoc: Document histogram-threshold setting.

	* magick/enhance.c (NormalizeImage): Add support for
	histogram-threshold setting to specify the percentage of the
	histogram to discard when computing image normalization parameters
	(default is 0.1%).  For example '-set histogram-threshold 0.01
	-normalize'.

	* www/api/types.rst: Update Image structure member documentation.

2010-07-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Add a test for posix_spawnp().  Results may be
	used in later development.

2010-07-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/Makefile.am (TESTS_PS_XFAIL_TESTS): PDF tests are expected
	to fail if Ghostscript is not available.

	* magick/utility.c (MagickStrlCat, MagickStrlCpy): Add handling
	for the case where size is zero in order to be conformant with the
	strlcat() and strlcpy() formal descriptions.  GraphicsMagick does
	its best to never pass a size of zero so an assertion that size is
	not zero remains in order to help catch bugs in GraphicsMagick.
	Issue was reported by Albert Cahalan.

2010-07-10  Glenn Randers-Pehrson  <glennrp@simple...>

	* coders/png.c: Always scale tRNS color to 16-bit short.  Otherwise,
	transparency was sometimes lost while reading PNG files whose depth
	is different from the Quantum depth.
