@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020100807"
+#define public MagickPackageVersionAddendum ".020100809"
 #define public MagickPackageReleaseDate "unreleased"
